--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,13 @@
 
        <!-- <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-start-web</artifactId>
+            <artifactId>spring-boot-start-IndexController</artifactId>
         </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
