--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=3434
+
+spring.mvc.static-path-pattern=/**/static/
+
+spring.resources.static-locations=classpath:*/html/
+
+spring.mvc.view.prefix=classpath:*/templates/
+
+spring.mvc.view.suffix=.html
