上传文件服务

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=3434
 
-spring.mvc.static-path-pattern=/**/static/
+spring.mvc.static-path-pattern=/static/**
 
-spring.resources.static-locations=classpath:*/html/
+spring.resources.static-locations=classpath:/static/
 
-spring.mvc.view.prefix=classpath:*/templates/
+spring.mvc.view.prefix=classpath:/templates/
 
 spring.mvc.view.suffix=.html
+
+spring.thymeleaf.cash=false
