--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
             <version>1.2.54</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
 
     </dependencies>
